# oss-project

./: .dockerignore  .gitignore  COMMITS.txt  Dockerfile  README.md  Report.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  results_library.json  results_notes.json  results_sample.json
src/analyzer/: cli.py  fixes.py  llm.py  parser.py  report.py  repory.py
src/llm_sec_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sec_analyzer/: cli.py  llm.py  rules.py
tests/: sample_vulnerable1.c  sample_vulnerable2.cpp
